--- a/hw6/6.md
+++ b/hw6/6.md
@@ -1,80 +1,80 @@
 
-1. P（Polynomial Time）
+# 1. P（Polynomial Time）
 
-定義：
+## 定義：
 P 是所有可以在多項式時間（Polynomial Time）內解決的問題的集合。
 換句話說，這些問題可以用有效率的演算法來解決，其執行時間至多與輸入大小 n 的多項式成正比
 
-特徵：
+## 特徵：
 問題的解法可以在合理的時間內計算出來。
 這些問題通常被認為是「易解決的」。
 
-範例：
+## 範例：
 排序問題
-最短路徑問題（
+最短路徑問題
 矩陣乘法。
 
-2. NP（Nondeterministic Polynomial Time）
+# 2. NP（Nondeterministic Polynomial Time）
 
-定義：
+## 定義：
 NP 是所有可以在多項式時間內驗證解是否正確的問題集合。
 換句話說，如果有人給你一個候選解，你可以在多項式時間內檢查它是否正確。
 NP 問題不一定能夠在多項式時間內找到解，但可以快速檢查解。
 
-特徵：
+## 特徵：
 一些 NP 問題目前沒有已知的多項式時間演算法。
 解決這些問題可能需要暴力搜索（Exponential Time）。
 
-範例：
+## 範例：
 子集和問題（Subset Sum Problem）：給定一組數字，能否找到一個子集，使其和為某個目標值？
 旅行推銷員問題（Traveling Salesman Problem, TSP）：給定若干城市和它們之間的距離，找出一條最短的路徑，訪問每個城市一次且僅一次。
 數獨（Sudoku）：檢查某個填好的數獨表是否滿足規則。
 
-3. NP-Complete（NP 完全問題）
+# 3. NP-Complete（NP 完全問題）
 
-定義：
+## 定義：
 NP-Complete 是一類最困難的 NP 問題。如果任何一個 NP-Complete 問題能用多項式時間解決，那麼所有 NP 問題也都能用多項式時間解決。
 NP-Complete 問題既屬於 NP，且具有「NP 硬（NP-Hard）」的性質。
 
-特徵：
+## 特徵：
 這些問題是 NP 問題中「最難解」的。如果能有效率地解決其中一個，則意味著可以解決所有 NP 問題。
 解決這類問題目前通常依賴於近似演算法或啟發式方法。
 
-範例：
+## 範例：
 SAT 問題（布林滿足問題，Boolean Satisfiability Problem）：給定一組布林公式，是否存在一組變數的賦值使公式為真？
 旅行推銷員問題（TSP，具體到決策版，如是否存在小於某距離的路徑）。
 圖的著色問題（Graph Coloring Problem）：是否可以用 k 種顏色著色圖的所有頂點，使相鄰的頂點顏色不同？
 
-4. P vs NP 問題
+# 4. P vs NP 問題
 
-問題描述：
+## 問題描述：
 「是否所有 NP 問題都可以在多項式時間內解決？」換句話說，是否P=NP？
 如果 P=NP，意味著所有能快速驗證解的問題，也能快速找到解。
 如果 P≠NP，則某些問題只能快速驗證解，卻無法快速求解。
 
-重要性：
+## 重要性：
 P vs NP 是計算機科學的核心問題之一，被認為是「千禧年大獎難題」之一，解決它可獲得 100 萬美元獎金。
 解決該問題將徹底改變計算科學，對密碼學、數學、人工智慧等領域有深遠影響。
 
-目前的現狀：
+## 目前的現狀：
 大多數人相信 P≠NP，但尚無正式證明。
 許多重要的加密技術（如 RSA 加密）依賴於 P≠NP
 
-5. NP-Hard（NP 難問題）
+# 5. NP-Hard（NP 難問題）
 
-定義：
+## 定義：
 NP-Hard 是一類比 NP 問題更廣泛的問題。
 這些問題不一定屬於 NP，但任何 NP 問題都可以被歸約（reduced）到 NP-Hard 問題。
 
-特徵：
+## 特徵：
 NP-Hard 問題可能無法驗證解是否正確，甚至可能不具備決定性解。
 如果能找到 NP-Hard 問題的多項式時間解法，那麼所有 NP 問題也都可以用多項式時間解決。
 
-範例：
+## 範例：
 哈密爾頓路徑問題（Hamiltonian Path Problem）。
 設計問題（如最佳佈局設計）。
 
-簡單總結
+# 簡單總結
 P 是可以快速解決的問題。
 NP 是可以快速驗證解是否正確的問題。
 NP-Complete 是 NP 問題中最困難的一類問題。
